# target-s3-polars

./: .pre-commit-config.yaml  LICENSE  README.md  meltano.yml  pyproject.toml  requirements.txt  tox.ini
.github/workflows/: build.yml  test.yml
target_s3_polars/: __init__.py  __main__.py  sinks.py  target.py
tests/: __init__.py  test_core.py
