[project]
name = "epoch8-target-s3-polars"
version = "0.0.1"
description = "Singer target for ., built with the Meltano Singer SDK."
readme = "README.md"
authors = [{ name = "SergeyZ06", email = "SergeyZ06@yandex.ru" }]
keywords = [
    "ELT",
    ".",
]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
license = "Apache-2.0"
license-files = [ "LICENSE" ]
requires-python = ">=3.9"
dependencies = [
    "singer-sdk[faker]~=0.46.4",
    "requests~=2.32.3",
]

[project.optional-dependencies]
s3 = [
    "s3fs~=2025.5.0",
]

[project.scripts]
# CLI declaration
target-s3-polars = 'target_s3_polars.target:Target..cli'

[dependency-groups]
dev = [
    { include-group = "test" },
]
test = [
    "pytest>=8",
    "pytest-github-actions-annotate-failures>=0.3",
    "singer-sdk[testing]",
]
[tool.hatch.build.targets.wheel]
packages = [
    "target_s3_polars",
]

[tool.mypy]
warn_unused_configs = true

[tool.ruff.lint]
ignore = [
    "COM812",  # missing-trailing-comma
]
select = ["ALL"]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[build-system]
requires = [
    "hatchling>=1,<2",
]
build-backend = "hatchling.build"

[tool.poetry]
name = "epoch8-target-s3-polars"
version = "0.1.0"
description = ""
authors = ["sergeyz06 <sergeyz06@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
meltano = "^3.7.7"
singer-sdk = {version = ">=0.46.4,<0.47.0", extras = ["faker"]}
